--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -8,16 +8,16 @@ main:
     url: '#about'
     weight: 10
   - name: Experience
-    url: '#posts'
+    url: '#experience'
     weight: 20
-  - name: Blocks
-    url: '#projects'
+  - name: Blogs
+    url: '#blogs'
     weight: 30
-  - name: Talks
-    url: '#talks'
+  - name: Skills
+    url: '#skills'
     weight: 40
   - name: Publications
-    url: '#featured'
+    url: '#publications'
     weight: 50
   - name: Contact
     url: '#contact'
