--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -15,7 +15,7 @@ defaultContentLanguage: en
 hasCJKLanguage: false
 defaultContentLanguageInSubdir: false
 removePathAccents: true
-
+math: true
 ############################
 ## MODULES
 ############################
@@ -74,3 +74,8 @@ sitemap:
   _merge: deep
 minify:
   _merge: deep
+parse:
+  myst_enable_extensions:
+    # don't forget to list any other extensions you want enabled,
+    # including those that are enabled by default!
+    - amsmath
